# companion

./: README.md  pyproject.toml  requirements.txt
companion/: __init__.py  __main__.py  app.py
companion/audio/: __init__.py  codecs.py  parse.py  pipewire.py  pwcli.py  wireplumber.py
companion/bluez/: __init__.py  adapter.py  agent.py  constants.py  device.py  manager.py  media.py  media_player.py
companion/core/: __init__.py  capabilities.py  config.py  errors.py  models.py  privileged.py  rfkill.py  share.py
companion/ui/: __init__.py  device_detail.py  device_tile.py  dialog_chrome.py  glyphs.py  main_window.py  more_dialog.py  share_sheet.py  sound_dialog.py  style.qss  theme.py  tray.py
data/pipewire/: 90-companion-combine-stream.conf
data/wireplumber/: 90-companion-bluetooth.conf  90-companion-device-wh1000xm5.conf
install/: companion.desktop  install.sh  uninstall.sh
polkit/: org.companion.bluetooth.policy
resources/fonts/: README.md
